# lucid

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: audit-2026-05-05.md  authoring-a-vertical.md  index.html  plan.md  principles.md  punch-list.md  thesis.md  why-lucid.md
evals/: README.md  __init__.py  harness.py  prompts.yaml
evals/results/: .gitkeep  skill-10-cross-vertical.json  skill-3-post-tier1-v3.json  skill-3-post-tier1.json  skill-3-smoke.json  skill-full.json
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: lucid.md
plugin/skills/lucid-fluency/: SKILL.md
site/: index.html
skill/lucid-fluency/: SKILL.md
src/lucid/: __init__.py  check.py  listener.py  server.py  translator.py  validator.py
src/lucid/verticals/: _loader.py  _schema.py
src/lucid/verticals/_template/: config.yaml
src/lucid/verticals/analysis_recommendation/: config.yaml
src/lucid/verticals/code/: config.yaml
src/lucid/verticals/creative/: config.yaml
src/lucid/verticals/document/: config.yaml
src/lucid/verticals/email/: config.yaml
src/lucid/verticals/explain_feynman/: config.yaml
src/lucid/verticals/explain_socratic/: config.yaml
src/lucid/verticals/general/: config.yaml
src/lucid/verticals/marketing/: config.yaml
src/lucid/verticals/prompt_image/: config.yaml
src/lucid/verticals/social/: config.yaml
tests/: test_check.py  test_eval_harness.py  test_listener.py  test_loader.py  test_schema.py  test_server.py  test_translator.py  test_validator.py
