[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lucid"
version = "0.2.0"
description = "The fluency layer between human intent and AI output."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jonathan Fiorucci", email = "jonfiorucci@gmail.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "anthropic",
    "claude",
    "prompt-engineering",
    "fluency",
    "ai-infrastructure",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "deepeval>=2.0",
]

[project.urls]
Homepage = "https://github.com/Jonnycatx/lucid"
Repository = "https://github.com/Jonnycatx/lucid"
Issues = "https://github.com/Jonnycatx/lucid/issues"

[project.scripts]
lucid = "lucid.server:main"
lucid-check = "lucid.check:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lucid"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"
